added images and fixed css

--- a/html/results.html
+++ b/html/results.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8"> 
 		<title> Reconnect </title>  
-        <link rel="stylesheet" href="webStyle.css" type="text/css"> 
+        <link rel="stylesheet" href="../css/results.css" type="text/css"> 
         <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&family=Noto+Sans+JP&display=swap" rel="stylesheet"> -->
         <link rel="preconnect" href="https://fonts.gstatic.com"> 
         <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
                 <div id="games" class="wrapper">
                     <a id="codenames" class="cards" href="https://codenames.game" target="_blank" >
                         <div class="base">
-                            <img src="Gallery/codenames.png" alt="Error" width="145px" height="70px">    
+                            <img src="../images/codenames.png" alt="Error" width="145px" height="70px">    
                             <h3> Codenames Online </h3>
                             <p class="tags"> Casual </p>
                             <p class="tags"> Comedy </p>
@@ -38,7 +38,7 @@
                     </a>
                     <a id="skribblio" class="cards" href="https://skribbl.io" target="_blank" >
                         <div class="base">
-                            <img src="Gallery/skrib.jpg" alt="Error" width="135px" height="70px">
+                            <img src="../images/skrib.jpg" alt="Error" width="135px" height="70px">
                             <h3> Skribbl.io </h3>
                             <p class="tags"> Casual </p>
                             <p class="tags"> Comedy </p>
@@ -55,7 +55,7 @@
                     </a>
                     <a id="amongus" class="cards" href="https://store.steampowered.com/app/945360/Among_Us/" target="_blank" >
                         <div class="base">
-                            <img src="Gallery/amongus.jpg" alt="Error" width="140px" height="70px">
+                            <img src="../images/amongus.jpg" alt="Error" width="140px" height="70px">
                             <h3> Among Us </h3>
                             <p class="tags"> Casual </p>
                             <p class="tags"> Cartoony </p>
@@ -73,7 +73,7 @@
                     </a>
                     <a id="golf" class="cards" href="https://store.steampowered.com/app/431240/Golf_With_Your_Friends/" target="_blank" >
                         <div class="base">
-                            <img src="Gallery/golf.jpg" alt="Error" width="140px" height="70px">
+                            <img src="../images/golf.jpg" alt="Error" width="140px" height="70px">
                             <h3> Golf With Your Friends </h3>
                             <p class="tags"> Casual </p>
                             <p class="tags"> Sports </p>
@@ -95,7 +95,7 @@
                     </a>
                     <a id="pubg" class="cards" href="https://store.steampowered.com/app/578080/PLAYERUNKNOWNS_BATTLEGROUNDS/" target="_blank" >
                         <div class="base">
-                            <img src="Gallery/pubg.jpg" alt="Error" width="140px" height="70px">
+                            <img src="../images/pubg.jpg" alt="Error" width="140px" height="70px">
                             <h3> PLAYERUNKNON'S BATTLEGROUNDS </h3>
                             <p class="tags"> Survival </p>
                             <p class="tags"> Shooter </p>
@@ -117,7 +117,7 @@
                     </a>
                     <a id="fallguys" class="cards" href="https://store.steampowered.com/app/1097150/Fall_Guys_Ultimate_Knockout/" target="_blank" >
                         <div class="base">
-                            <img src="Gallery/fallguys.jpg" alt="Error" width="140px" height="70px">
+                            <img src="../images/fallguys.jpg" alt="Error" width="140px" height="70px">
                             <h3> Fall Guys </h3>
                             <p class="tags"> Comedy </p>
                             <p class="tags"> Battle royale </p>
@@ -134,7 +134,7 @@
                     </a>
                     <a id="sporcle" class="cards" href="https://www.sporcle.com" target="_blank" >
                         <div class="base">
-                            <img src="Gallery/sporcle.jpg" alt="Error" width="140px" height="70px">
+                            <img src="../images/sporcle.jpg" alt="Error" width="140px" height="70px">
                             <h3> Sporcle Quizzes </h3>
                             <p class="tags"> Casual </p>
                             <p class="tags"> Strategy </p>
@@ -150,7 +150,7 @@
                     </a>
                     <div id="trivia" class="cards" >
                         <div class="base">
-                            <img src="Gallery/trivia.png" alt="Error" width="140px" height="70px">
+                            <img src="../images/trivia.png" alt="Error" width="140px" height="70px">
                             <h3> Trivia via Zoom </h3>
                             <p class="tags"> Casual </p>
                             <p class="tags"> Comedy </p>
@@ -167,7 +167,7 @@
                     </div>
                     <a id="overcooked" class="cards" href="https://store.steampowered.com/app/728880/Overcooked_2/" target="_blank" >
                         <div class="base">
-                            <img src="Gallery/overcooked.jpg" alt="Error" width="140px" height="70px">
+                            <img src="../images/overcooked.jpg" alt="Error" width="140px" height="70px">
                             <h3> Overcooked 2 </h3>
                             <p class="tags"> Casual </p>
                             <p class="tags"> Indie </p>
@@ -191,7 +191,7 @@
                 <div id="exercises" class="wrapper">
                     <a id="yogaBeginner" class="cards" href="https://yogawithadriene.com/yoga-complete-beginners/" target="_blank" >
                         <div class="base">
-                            <img src="Gallery/yogaBeginner.png" alt="Error" width="140px" height="70px">
+                            <img src="../images/yogaBeginner.png" alt="Error" width="140px" height="70px">
                             <h3> Yoga For Complete Beginners </h3>
                             <p class="tags"> Flexibility </p>
                             <p class="tags"> Balance </p>
@@ -210,7 +210,7 @@
                     </a>
                     <a id="yogaElders" class="cards" href="https://youtu.be/dF7O6-QabIo" target="_blank" >
                         <div class="base">
-                            <img src="Gallery/yogaElders.png" alt="Error" width="140px" height="70px">
+                            <img src="../images/yogaElders.png" alt="Error" width="140px" height="70px">
                             <h3> Rainbow Yoga </h3>
                             <p class="tags"> Flexibility </p>
                             <p class="tags"> Balance </p>
@@ -226,7 +226,7 @@
                     </a>
                     <a id="flexibleFast" class="cards" href="https://youtu.be/jeNwE4VXqgs" target="_blank" >
                         <div class="base">
-                            <img src="Gallery/flexibleFast.png" alt="Error" width="140px" height="70px">
+                            <img src="../images/flexibleFast.png" alt="Error" width="140px" height="70px">
                             <h3> Stretches for the Inflexible! </h3>
                             <p class="tags"> Flexibility </p>
                             <p class="tags"> Balance </p>
@@ -241,7 +241,7 @@
                     </a>
                     <a id="hiit" class="cards" href="https://youtu.be/QultvH22v2Y" target="_blank" >
                         <div class="base">
-                            <img src="Gallery/hiit.png" alt="Error" width="140px" height="70px">
+                            <img src="../images/hiit.png" alt="Error" width="140px" height="70px">
                             <h3> Full Body Cardio HIIT Workout </h3>
                             <p class="tags"> Strength </p>
                             <p class="tags"> Cardio </p>
@@ -256,7 +256,7 @@
                     </a>
                     <a id="karate" class="cards" href="https://youtu.be/hWB0Xehv23A" target="_blank" >
                         <div class="base">
-                            <img src="Gallery/hiit.png" alt="Error" width="140px" height="70px">
+                            <img src="../images/hiit.png" alt="Error" width="140px" height="70px">
                             <h3> Shotokan Karate Follow Along Class </h3>
                             <p class="tags"> Strength </p>
                             <p class="tags"> Cardio </p>
@@ -272,7 +272,7 @@
                     </a>
                     <a id="taekwondo" class="cards" href="https://youtu.be/F1kXuQ3QB-Y" target="_blank" >
                         <div class="base">
-                            <img src="Gallery/hiit.png" alt="Error" width="140px" height="70px">
+                            <img src="../images/hiit.png" alt="Error" width="140px" height="70px">
                             <h3> Taekwondo Follow Along Class  </h3>
                             <p class="tags"> Strength </p>
                             <p class="tags"> Cardio </p> 
@@ -295,7 +295,7 @@
                 <div id="cooking" class="wrapper">
                     <a id="codenames" class="cards" href="https://codenames.game" target="_blank" >
                         <div class="base">
-                            <img src="Gallery/codenames.png" alt="Error" width="145px" height="70px">    
+                            <img src="../images/codenames.png" alt="Error" width="145px" height="70px">    
                             <h3> Codenames Online </h3>
                             <p> A fun guessing game for all ages! </p>
                         </div>
@@ -307,7 +307,7 @@
                     </a>
                     <a id="skribblio" class="cards" href="https://skribbl.io" target="_blank" >
                         <div class="base">
-                            <img src="Gallery/skrib.jpg" alt="Error" width="135px" height="70px">
+                            <img src="../images/skrib.jpg" alt="Error" width="135px" height="70px">
                             <h3> Skribbl.io </h3>
                             <p> Want to put your artistic side to the test? Skribbl.io is the game for you! </p>
                         </div>
@@ -319,7 +319,7 @@
                     </a>
                     <a id="amongus" class="cards" href="https://store.steampowered.com/app/945360/Among_Us/" target="_blank" >
                         <div class="base">
-                            <img src="Gallery/amongus.jpg" alt="Error" width="140px" height="70px">
+                            <img src="../images/amongus.jpg" alt="Error" width="140px" height="70px">
                             <h3> Among Us </h3>
                             <p> Be a crewmate or an imposter. Save your team or sabotage. </p>
                         </div>
@@ -331,7 +331,7 @@
                     </a>
                     <a id="golf" class="cards" href="https://store.steampowered.com/app/431240/Golf_With_Your_Friends/" target="_blank" >
                         <div class="base">
-                            <img src="Gallery/golf.jpg" alt="Error" width="140px" height="70px">
+                            <img src="../images/golf.jpg" alt="Error" width="140px" height="70px">
                             <h3> Golf With Your Friends </h3>
                             <p> ---golf with your friends description--- </p>
                         </div>
@@ -343,7 +343,7 @@
                     </a>
                     <a id="fallguys" class="cards" href="https://store.steampowered.com/app/1097150/Fall_Guys_Ultimate_Knockout/" target="_blank" >
                         <div class="base">
-                            <img src="Gallery/fallguys.jpg" alt="Error" width="140px" height="70px">
+                            <img src="../images/fallguys.jpg" alt="Error" width="140px" height="70px">
                             <h3> Fall Guys </h3>
                             <p> ---fall guys description--- </p>
                         </div>
@@ -362,7 +362,7 @@
                 <div id="movies" class="wrapper">
                     <a id="codenames" class="cards" href="https://codenames.game" target="_blank" >
                         <div class="base">
-                            <img src="Gallery/codenames.png" alt="Error" width="145px" height="70px">    
+                            <img src="../images/codenames.png" alt="Error" width="145px" height="70px">    
                             <h3> Codenames Online </h3>
                             <p> A fun guessing game for all ages! </p>
                         </div>
@@ -374,7 +374,7 @@
                     </a>
                     <a id="skribblio" class="cards" href="https://skribbl.io" target="_blank" >
                         <div class="base">
-                            <img src="Gallery/skrib.jpg" alt="Error" width="135px" height="70px">
+                            <img src="../images/skrib.jpg" alt="Error" width="135px" height="70px">
                             <h3> Skribbl.io </h3>
                             <p> Want to put your artistic side to the test? Skribbl.io is the game for you! </p>
                         </div>
@@ -386,7 +386,7 @@
                     </a>
                     <a id="amongus" class="cards" href="https://store.steampowered.com/app/945360/Among_Us/" target="_blank" >
                         <div class="base">
-                            <img src="Gallery/amongus.jpg" alt="Error" width="140px" height="70px">
+                            <img src="../images/amongus.jpg" alt="Error" width="140px" height="70px">
                             <h3> Among Us </h3>
                             <p> Be a crewmate or an imposter. Save your team or sabotage. </p>
                         </div>
@@ -398,7 +398,7 @@
                     </a>
                     <a id="golf" class="cards" href="https://store.steampowered.com/app/431240/Golf_With_Your_Friends/" target="_blank" >
                         <div class="base">
-                            <img src="Gallery/golf.jpg" alt="Error" width="140px" height="70px">
+                            <img src="../images/golf.jpg" alt="Error" width="140px" height="70px">
                             <h3> Golf With Your Friends </h3>
                             <p> ---golf with your friends description--- </p>
                         </div>
@@ -410,7 +410,7 @@
                     </a>
                     <a id="fallguys" class="cards" href="https://store.steampowered.com/app/1097150/Fall_Guys_Ultimate_Knockout/" target="_blank" >
                         <div class="base">
-                            <img src="Gallery/fallguys.jpg" alt="Error" width="140px" height="70px">
+                            <img src="../images/fallguys.jpg" alt="Error" width="140px" height="70px">
                             <h3> Fall Guys </h3>
                             <p> ---fall guys description--- </p>
                         </div>
