did the cooking section

--- a/html/results.html
+++ b/html/results.html
@@ -286,6 +286,22 @@
                            <p>Welcome to your first Korean Taekwondo class. Simply follow along with 3rd degree black belt instructor Adam Gerrald. Get a great workout as you learn the basic principles of this awesome art.</p>
                         </div>
                     </a>
+                    <a id="rasputin" class="cards" href="https://www.youtube.com/watch?v=4DcGBE-F9hk" target="_blank" >
+                      <div class="base">
+                          <img src="../images/rasputin.jpg" alt="Error" width="140px" height="70px">
+                          <h3> Rasputin Just Dance  </h3>
+                          <p class="tags"> Cardio </p> 
+                          <p class="tags"> Balance </p>
+                          <p class="tags"> Strength </p>
+                      </div>
+                      <div class="details">  
+                          <p> <b>Age range:</b> All ages</p>
+                          <p> <b>Equipment: </b> None </p>
+                      </div>
+                      <div class="description">
+                         <p>Follow along to the Just Dance demo for the song Rasputin. This is a great way to get moving while having fun, either on your own or with friends!</p>
+                      </div>
+                  </a>
                 </div>
             </div>
 
@@ -293,66 +309,121 @@
             <div class="categories">
                 <h2> Cooking </h2>
                 <div id="cooking" class="wrapper">
-                    <a id="codenames" class="cards" href="https://codenames.game" target="_blank" >
+                    <a id="avocadoToast" class="cards" href="https://youtu.be/28GCv_C-SVI" target="_blank" >
                         <div class="base">
-                            <img src="../images/codenames.png" alt="Error" width="145px" height="70px">    
-                            <h3> Codenames Online </h3>
-                            <p> A fun guessing game for all ages! </p>
+                            <img src="../images/avocadoToast.png" alt="Error" width="140px" height="70px">
+                            <h3> Avocado Toast with Eggs  </h3>
+                            <p class="tags"> Breakfast </p>
+                            <p class="tags"> Nut-Free </p> 
                         </div>
                         <div class="details">  
-                            <!-- <h3> Details </h3> -->
                             <p> <b>Age range:</b> All ages</p>
-                            <p><b>Price: </b> Free</p>
+                        </div>
+                        <div class="description">
+                           <p> What I love about this breakfast is that it’s not only healthy and hearty, it’s delicious and quick to make (if you’re organised).   The eggs are fried but kind of poached and steamed at the same time.  So they remain soft and delicate like poached eggs with the flavour of fried eggs.  Adding the chopped chives to the raw whites gives the eggs a great flavour and an interesting look as the chives set in the cooked whites.</p>
                         </div>
                     </a>
-                    <a id="skribblio" class="cards" href="https://skribbl.io" target="_blank" >
+                    <a id="chocolateCake" class="cards" href="https://www.allrecipes.com/recipe/17981/one-bowl-chocolate-cake-iii/" target="_blank" >
                         <div class="base">
-                            <img src="../images/skrib.jpg" alt="Error" width="135px" height="70px">
-                            <h3> Skribbl.io </h3>
-                            <p> Want to put your artistic side to the test? Skribbl.io is the game for you! </p>
+                            <img src="../images/chocolateCake.png" alt="Error" width="140px" height="70px">
+                            <h3> Chocolate Cake  </h3>
+                            <p class="tags"> Desserts </p>
                         </div>
                         <div class="details">  
-                            <!-- <h3> Details </h3> -->
                             <p> <b>Age range:</b> All ages</p>
-                            <p><b>Price: </b> Free</p>
+                        </div>
+                        <div class="description">
+                           <p>This is a rich and moist chocolate cake. It only takes a few minutes to prepare the batter. Frost with your favorite chocolate frosting.</p>
                         </div>
                     </a>
-                    <a id="amongus" class="cards" href="https://store.steampowered.com/app/945360/Among_Us/" target="_blank" >
+                    <a id="tahiniCookies" class="cards" href="https://www.loveandlemons.com/tahini-cookies/" target="_blank" >
                         <div class="base">
-                            <img src="../images/amongus.jpg" alt="Error" width="140px" height="70px">
-                            <h3> Among Us </h3>
-                            <p> Be a crewmate or an imposter. Save your team or sabotage. </p>
+                            <img src="../images/tahiniCookies.png" alt="Error" width="140px" height="70px">
+                            <h3> Chocolate Cake  </h3>
+                            <p class="tags"> Desserts </p>
+                            <p class="tags"> Gluten-Free </p>
+                            <p class="tags"> Vegan </p>
                         </div>
                         <div class="details">  
-                            <!-- <h3> Details </h3> -->
                             <p> <b>Age range:</b> All ages</p>
-                            <p><b>Price: </b> Free</p>
+                        </div>
+                        <div class="description">
+                           <p>It's impossible to eat one of these tahini cookies without reaching for a second. They're lightly sweet, chewy, and filled with spiced, nutty flavor.</p>
                         </div>
                     </a>
-                    <a id="golf" class="cards" href="https://store.steampowered.com/app/431240/Golf_With_Your_Friends/" target="_blank" >
+                    <a id="falafel" class="cards" href="https://www.loveandlemons.com/falafel/#wprm-recipe-container-42582" target="_blank" >
                         <div class="base">
-                            <img src="../images/golf.jpg" alt="Error" width="140px" height="70px">
-                            <h3> Golf With Your Friends </h3>
-                            <p> ---golf with your friends description--- </p>
+                            <img src="../images/falafel.png" alt="Error" width="140px" height="70px">
+                            <h3> Crispy Bakes Falafels  </h3>
+                            <p class="tags"> Dinner </p>
+                            <p class="tags"> Vegan </p>
+                            <p class="tags"> Dairy-Free </p>
                         </div>
                         <div class="details">  
-                            <!-- <h3> Details </h3> -->
                             <p> <b>Age range:</b> All ages</p>
-                            <p><b>Price: </b> Free</p>
+                        </div>
+                        <div class="description">
+                           <p>Packed with herbs & spices, this crispy baked falafel recipe is bursting with delicious flavor. Stuff it into pitas, top it with your favorite fixings and enjoy!</p>
                         </div>
                     </a>
-                    <a id="fallguys" class="cards" href="https://store.steampowered.com/app/1097150/Fall_Guys_Ultimate_Knockout/" target="_blank" >
+                    <a id="riceRoll" class="cards" href="https://www.kidspot.com.au/kitchen/recipes/kid-approved-chicken-rice-paper-rolls/7pncdkto?r=collection/allergyfriendlyrecipesnutfreedairyfreeglutenfree&c=xzj7qgm6/Allergy%20friendly%20recipes%20nut%20free%20dairy%20free%20gluten%20free" target="_blank" >
                         <div class="base">
-                            <img src="../images/fallguys.jpg" alt="Error" width="140px" height="70px">
-                            <h3> Fall Guys </h3>
-                            <p> ---fall guys description--- </p>
+                            <img src="../images/riceRoll.png" alt="Error" width="140px" height="70px">
+                            <h3> Kid-approved Chicken Rice Paper Rolls </h3>
+                            <p class="tags"> Dinner </p>
+                            <p class="tags"> Dairy-Free </p>
+                            <p class="tags"> Gluten-Free </p>
                         </div>
                         <div class="details">  
-                            <!-- <h3> Details </h3> -->
                             <p> <b>Age range:</b> All ages</p>
-                            <p><b>Price: </b> Free</p>
+                        </div>
+                        <div class="description">
+                           <p>These little parcels of yum are a perfect way to throw together a tasty yet healthy dinner that even the smallest member of your family will wolf down.</p>
                         </div>
                     </a>
+                    <a id="muffins" class="cards" href="https://www.allrecipes.com/recipe/18061/egg-free-dairy-free-nut-free-cake/" target="_blank" >
+                      <div class="base">
+                          <img src="../images/muffins.png" alt="Error" width="140px" height="70px">
+                          <h3> Egg-Free Dairy-Free Nut-Free Cake </h3>
+                          <p class="tags"> Dessert </p>
+                          <p class="tags"> Nut-Free </p>
+                          <p class="tags"> Vegan </p>
+                      </div>
+                      <div class="details">  
+                          <p> <b>Age range:</b> All ages</p>
+                      </div>
+                      <div class="description">
+                         <p>This chocolate cake is so good, you'll never miss the dairy products! Check at your health food store for tofu or nondairy chocolate chips.</p>
+                      </div>
+                  </a>
+                  <a id="quesadillas" class="cards" href="https://youtu.be/j2z1ABDaaxg" target="_blank" >
+                    <div class="base">
+                        <img src="../images/quesadillas.png" alt="Error" width="140px" height="70px">
+                        <h3> Breakfast Quesadillas </h3>
+                        <p class="tags"> Breakfast </p>
+                    </div>
+                    <div class="details">  
+                        <p> <b>Age range:</b> All ages</p>
+                    </div>
+                    <div class="description">
+                       <p>Breakfast quesadillas are the easiest one-pan breakfast and take just minutes to make. If you enjoyed our Steak Quesadillas, you will love these!</p>
+                    </div>
+                </a>
+                <a id="lunchbox" class="cards" href="https://www.momables.com/blt-salad-lunch/#tasty-recipes-34819" target="_blank" >
+                  <div class="base">
+                      <img src="../images/lunchbox.png" alt="Error" width="140px" height="70px">
+                      <h3> BLT Salad Lunchbox </h3>
+                      <p class="tags"> Lunch </p>
+                      <p class="tags"> Nut-Free </p>
+                      <p class="tags"> Gluten-Free </p>
+                  </div>
+                  <div class="details">  
+                      <p> <b>Age range:</b> All ages</p>
+                  </div>
+                  <div class="description">
+                     <p>If you love all things bacon then this BLT Salad is just what you need! All the BLT fixing plus avocado, cheese, and homemade Ranch dressing- it’s meal prep perfection!</p>
+                  </div>
+                </a>
                 </div>
             </div>
 
